[iOS] AirPlay device name is sometimes wrong https://bugs.webkit.org/show_bug.cgi?id=184543 <rdar://problem/39105498>

Reviewed by Jer Noble.

Source/WebCore:

No new tests, this can only be tested with a specific hardware setup.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::exernalDeviceDisplayNameForPlayer): Get the device name from the AVOutputContext
when possible.

Source/WebCore/PAL:

* pal/spi/mac/AVFoundationSPI.h: Declare more AVOutputContext SPI.


Canonical link: https://commits.webkit.org/200197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230708 268f45cc-cd09-0410-ab3c-d52691b4dbfc